designathon small fixes

--- a/src/spring-designathon25/style.css
+++ b/src/spring-designathon25/style.css
@@ -6,8 +6,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    background: #FCE1EE;
     color: #333;
+    background-color: #f7ddea;
   }
   
   .landing {
@@ -329,8 +329,6 @@ body {
     position: relative;
     width: 100%;
     min-height: 100vh;
-    background: #FCE1EE;
-    /* padding: 4rem 1rem 10rem; */
     text-align: center;
     font-family: 'Poppins', sans-serif;
     margin-top: -2rem; 
@@ -471,27 +469,22 @@ body {
       margin-bottom: 2rem;
     }
   }
-  
 
-  body {
-    background-color: #f7ddea;
-    font-family: 'Quando', sans-serif;
-    margin: 0;
-    padding: 0;
-  }
   .timeline-page {
     display: flex;
     justify-content: center;
     padding: 40px 20px;
-    background-color: #fce4ec;
+    margin: 5vh 0;
+    /* background-color: #fce4ec; */
   }
   .schedule-container {
-    background-color: #FFFDE4;
     padding: 40px 30px;
     border-radius: 30px;
     width: 90%;
+    background-color: #FFFDE4;
     /* max-width: 700px; */
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+    z-index: 1;
   }
   
 
@@ -573,7 +566,7 @@ body {
   
 /* ====== PRIZES SECTION ====== */
 .prizes-section {
-  background: #FCE1EE;
+  /* background: #FCE1EE; */
   padding: 4rem 1.5rem;
   font-family: 'Poppins', sans-serif;
 }
@@ -604,12 +597,18 @@ body {
   z-index: 2;
 }
 .prizes-stars{
+  position: absolute;
+  /* top: 0; */
+  width: 100%;
+  max-width: 1300px;
+  z-index:0;
+}
+.prizes-header-wrapper{
+  display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
 }
 
-.prizes-intro,
 .prizes-subintro {
   max-width: 800px;
   margin: 0.5rem auto;
@@ -752,7 +751,7 @@ body {
 /* Sponsors Section Styling */
 
 .sponsors-container {
-  background-color: #fce9f1; /* Light pink background */
+  /* background-color: #fce9f1; */
   padding: 3rem 0rem 4rem;
   text-align: center;
   /* position: relative; */
@@ -764,6 +763,9 @@ body {
   position: relative;
   margin-bottom: 2rem;
   padding: 2rem 0;
+}
+.sponsors-header-wrapper img{
+  z-index: 1;
 }
 
 .sponsors-header {
@@ -808,10 +810,12 @@ body {
 .visme-logo {
   max-width: 100%;
   height: auto;
+  z-index: 2;
 }
 .intuit-logo {
   max-width: 100%;
   height: auto;
+  z-index: 2;
 }
 
 /* Previous sponsors section */
